# chromium-secure-embed

base/: values.cc
chrome/browser/: BUILD.gn  chrome_content_browser_client_receiver_bindings.cc
chrome/browser/ui/: BUILD.gn  browser_navigator.cc  browser_window.h
chrome/renderer/: BUILD.gn  chrome_content_renderer_client.cc
components/: BUILD.gn
components/guest_contents/browser/: guest_contents_handle.cc
components/input/: BUILD.gn  render_widget_host_input_event_router.cc  render_widget_host_view_composite.cc  render_widget_host_view_composite.h  render_widget_host_view_core.cc  render_widget_host_view_core.h
components/performance_manager/: performance_manager_tab_helper.cc  performance_manager_tab_helper.h
components/performance_manager/graph/: frame_node_impl.cc  frame_node_impl.h
components/secure_embed/browser/: BUILD.gn  secure_embed_browsertest.cc  secure_embed_host.cc  secure_embed_host.h  secure_embed_web_plugin_browsertest.cc
components/secure_embed/renderer/: BUILD.gn  create_plugin.cc  create_plugin.h  secure_embed_web_plugin.cc  secure_embed_web_plugin.h  secure_embed_web_plugin_browsertest.cc
content/browser/: BUILD.gn  guest_frame_connector_delegate.cc  guest_frame_connector_delegate.h  guest_frame_impl.cc  guest_frame_impl.h  secure_embed_connector_delegate.cc  secure_embed_connector_delegate.h  secure_embed_connector_impl.cc  secure_embed_connector_impl.h  surface_embed_connector_impl.cc  surface_embed_connector_impl.h
content/public/common/: BUILD.gn
content/shell/: BUILD.gn
content/test/: BUILD.gn
ui/base/: base_window.h
(+100 files in other folders)
