# Copyright 2025 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//components/secure_embed/buildflags/buildflags.gni")

assert(enable_secure_embed)

component("renderer") {
  defines = [ "IS_SECURE_EMBED_IMPL" ]

  public = [ "create_plugin.h" ]

  sources = [
    "create_plugin.cc",
    "create_plugin.h",
    "secure_embed_web_plugin.cc",
    "secure_embed_web_plugin.h",
  ]

  deps = [ "//third_party/blink/public:blink" ]

  public_deps = [ "//components/secure_embed/common:mojom" ]
}

source_set("browser_tests") {
  testonly = true

  defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]

  sources = [ "secure_embed_web_plugin_browsertest.cc" ]

  deps = [
    "//base/test:test_support",
    "//components/secure_embed/common:mojom",
    "//content/public/browser",
    "//content/shell:content_shell_lib",
    "//content/test:browsertest_support",
    "//content/test:test_support",
  ]
}
